<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal_color"
    android:orientation="vertical">


    <EditText
        android:id="@+id/et_name"
        android:background="@color/secondary_color"
        android:textColor="@color/principal_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_surname"
        android:background="@color/secondary_color"
        android:textColor="@color/principal_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/surname"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_email"
        android:background="@color/secondary_color"
        android:textColor="@color/principal_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_password"
        android:background="@color/secondary_color"
        android:textColor="@color/principal_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_telephone"
        android:background="@color/secondary_color"
        android:textColor="@color/principal_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:autofillHints="" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/btn_submit" />

</LinearLayout>
